# fossil-algorithm

./: README.md  SECURITY.md  meson.build
code/logic/: meson.build  search.c  shuffle.c  sort.c
code/logic/fossil/algorithm/: framework.h  search.h  shuffle.h  sort.h
code/tests/: meson.build
code/tests/cases/: test_search.c  test_search.cpp  test_shuffle.c  test_shuffle.cpp  test_sort.c  test_sort.cpp
